--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,26 +1,40 @@
-name: Android CI
+name: Android CI with SonarCloud
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ main ]  # Replace with your default branch
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ main ]  # Replace with your default branch
 
 jobs:
-  build:
-
+  build-and-analyze:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: set up JDK 11
+      with:
+        fetch-depth: 0  # Ensures full history for SonarCloud PR analysis
+
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
-        cache: gradle
+        cache: 'gradle'
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --stacktrace
+
+    - name: Run SonarCloud Scan
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Auto-provided by GitHub
+        SONAR_TOKEN: ${{ secrets.MYREBONNTE_SONARCLOUD_TOKEN }}    # Add this in GitHub Secrets
+      run: |
+        ./gradlew sonarqube \
+          -Dsonar.token=$SONAR_TOKEN \
+          -Dsonar.projectKey=com.openclassrooms.rebonnte \
+          -Dsonar.organization=briceulrichafferi \
+          -Dsonar.host.url=https://sonarcloud.io
