--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,24 +3,27 @@ name: Android CI with SonarCloud
 on:
   pull_request:
     branches: [ main ]  # Replace with your default branch
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   build-and-analyze:
     runs-on: ubuntu-latest
+    timeout-minutes: 60  # Prevents jobs from running indefinitely
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Ensures full history for SonarCloud PR analysis
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: 'gradle'
 
-    - name: Grant execute permission for gradlew
+    - name: Grant Execute Permission for Gradle
       run: chmod +x gradlew
 
     - name: Build with Gradle
@@ -29,10 +32,15 @@ jobs:
     - name: Run SonarCloud Scan
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Auto-provided by GitHub
-        SONAR_TOKEN: ${{ secrets.MYREBONNTE_SONARCLOUD_TOKEN }}    # Add this in GitHub Secrets
+        SONAR_TOKEN: ${{ secrets.MYREBONNTE_SONARCLOUD_TOKEN }}  # Add this in GitHub Secrets
       run: |
         ./gradlew sonarqube \
           -Dsonar.token=$SONAR_TOKEN \
           -Dsonar.projectKey=com.openclassrooms.rebonnte \
           -Dsonar.organization=briceulrichafferi \
           -Dsonar.host.url=https://sonarcloud.io
+
+    - name: Check SonarCloud Quality Gate
+      uses: sonarsource/sonarqube-quality-gate-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.MYREBONNTE_SONARCLOUD_TOKEN }}
