--- a/.github/workflows/createRedonnte1.yml
+++ b/.github/workflows/createRedonnte1.yml
@@ -1,46 +1,42 @@
 name: Android CI with SonarCloud
 
 on:
+  push:
+    branches: [ main ]  # Ensure this matches your SonarCloud default branch
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ main ]  
 
 jobs:
   build-and-analyze:
     runs-on: ubuntu-latest
-    timeout-minutes: 30  # Reduce timeout to 30 minutes
+    timeout-minutes: 30
 
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
       with:
-        fetch-depth: 1  # Fetch only the latest commit to speed up checkout
+        fetch-depth: 0  # Ensures full history for SonarCloud PR analysis
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: 'gradle'
+        cache: gradle
 
     - name: Grant Execute Permission for Gradle
       run: chmod +x gradlew
 
-    - name: Build with Gradle (Optimized)
-      run: ./gradlew build --no-daemon --parallel --stacktrace
+    - name: Build with Gradle
+      run: ./gradlew build --stacktrace
 
-    - name: Run SonarCloud Scan (Optimized)
+    - name: Run SonarCloud Scan
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.MYREBONNTE_SONARCLOUD_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+        SONAR_TOKEN: ${{ secrets.MYREBONNTE_SONARCLOUD_TOKEN }}  
       run: |
-        ./gradlew sonarqube --no-daemon --parallel \
+        ./gradlew sonar \
           -Dsonar.token=$SONAR_TOKEN \
           -Dsonar.projectKey=com.openclassrooms.rebonnte \
           -Dsonar.organization=briceulrichafferi \
           -Dsonar.host.url=https://sonarcloud.io
-
-    - name: Check SonarCloud Quality Gate
-      uses: sonarsource/sonarqube-quality-gate-action@master
-      env:
-        SONAR_TOKEN: ${{ secrets.MYREBONNTE_SONARCLOUD_TOKEN }}
