--- a/.github/workflows/createRebonnte2.yml
+++ b/.github/workflows/createRebonnte2.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         ./gradlew sonar \
           -Dsonar.token=$SONAR_TOKEN \
-          -Dsonar.projectKey=com.openclassrooms.rebonnte \
+          -Dsonar.projectKey=BriceUlrichAfferi_Rebonnte \
           -Dsonar.organization=briceulrichafferi \
-          -Dsonar.host.url=https://sonarcloud.io
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.branch.name=main
