--- a/.github/workflows/redonnte_cd.yml
+++ b/.github/workflows/redonnte_cd.yml
@@ -1,42 +1,26 @@
 name: Firebase Distribution
-
 on:
   push:
-
 jobs:
   distribute:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-
       - name: Ensure gradlew is executable
         run: chmod +x ./gradlew
-
-      - name: Write Keystore File
-        run: echo "${{ secrets.KEYSTORE_FILE }}" | base64 -d > app/new_keystore.jks
-
       - name: Build APK
-        run: ./gradlew assembleRelease --stacktrace  # Changed to assembleRelease for APK
-        env:
-          STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-
+        run: ./gradlew assembleRelease --stacktrace
       - name: Write Firebase Service Credentials
         run: echo "${{ secrets.FIREBASE_CREDENTIALS }}" > firebase_credentials.json
         shell: bash
-
       - name: Check Firebase credentials file
         run: cat firebase_credentials.json
-
       - name: Upload to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
