--- a/.github/workflows/Redonnte-CI.yml
+++ b/.github/workflows/Redonnte-CI.yml
@@ -26,17 +26,8 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Run Tests
+      - name: Run Unit Tests
         run: ./gradlew test
-
-      - name: Set up Android Emulator
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          target: google_apis
-          arch: x86_64
-          profile: Nexus 6
-          script: echo "Emulator is ready"
 
       - name: Run Instrumented Tests
         uses: reactivecircus/android-emulator-runner@v2
@@ -45,10 +36,21 @@ jobs:
           target: google_apis
           arch: x86_64
           profile: Nexus 6
-          script: ./gradlew connectedAndroidTest
+          cores: 2
+          avd-name: test
+          force-avd-creation: true
+          emulator-boot-timeout: 600
+          emulator-port: 5554
+          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
+          disable-animations: true
+          script: |
+            adb wait-for-device
+            adb shell getprop sys.boot_completed | grep -q "1"
+            echo "Emulator is ready"
+            ./gradlew connectedAndroidTest
 
       - name: Upload Test Results
-        if: always() # Runs even if tests fail
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
