run tests on device

--- a/.github/workflows/Redonnte-CI.yml
+++ b/.github/workflows/Redonnte-CI.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Build with Gradle
         run: .\gradlew.bat build
 
+      - name: Run Unit Tests
+        run: |
+          .\gradlew.bat testDebugUnitTest --stacktrace
+
       - name: Run Instrumented Tests on Real Device
         run: |
           adb devices
