--- a/.github/workflows/Redonnte-CI.yml
+++ b/.github/workflows/Redonnte-CI.yml
@@ -42,7 +42,7 @@ jobs:
           adb -s emulator-5554 emu kill
           if ($?) { Write-Host "Emulator killed successfully" } else { Write-Host "Failed to kill emulator" }
           # Verify real device is active
-          adb -s 1cc072ab2f037ece shell pm list packages
+          adb -s 1cc072ab2f090dre shell pm list packages
           .\gradlew.bat connectedAndroidTest --stacktrace
 
       - name: Upload Test Results
