--- a/.github/workflows/Redonnte-CI.yml
+++ b/.github/workflows/Redonnte-CI.yml
@@ -7,15 +7,14 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    runs-on: self-hosted  # Your self-hosted Windows runner
+  test-on-real-device:
+    runs-on: self-hosted
 
     env:
       ANDROID_HOME: C:\Users\commu\AppData\Local\Android\Sdk
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -24,33 +23,31 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Write Keystore File
-        shell: powershell
+      - name: Set up Android SDK Tools
         run: |
-          [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String("${{ secrets.KEYSTORE_FILE }}")) | Out-File -FilePath "new_keystore.jks" -Encoding UTF8
+          $env:Path += ";C:\Users\commu\AppData\Local\Android\Sdk\platform-tools"
+          adb devices
 
-      - name: Write Keystore Properties
-        shell: powershell
+      - name: Build with Gradle
+        run: .\gradlew.bat build
+
+      - name: Run Unit Tests
         run: |
-          @"
-          storeFile=${{ github.workspace }}\new_keystore.jks
-          storePassword=${{ secrets.STORE_PASSWORD }}
-          keyAlias=${{ secrets.KEY_ALIAS }}
-          keyPassword=${{ secrets.KEY_PASSWORD }}
-          "@ | Out-File -FilePath "keystore.properties" -Encoding UTF8
+          .\gradlew.bat testDebugUnitTest --stacktrace
 
-      - name: Verify Keystore Setup (Debug)
-        shell: powershell
+      - name: Run Instrumented Tests on Real Device
         run: |
-          if (Test-Path "new_keystore.jks") { Write-Host "Keystore file exists" } else { Write-Host "Keystore file missing" }
-          Get-Content "keystore.properties" || Write-Host "Failed to read keystore.properties"
+          adb devices
+          # Optional: Disconnect emulator to ensure only real device is used
+          adb -s emulator-5554 emu kill
+          if ($?) { Write-Host "Emulator killed successfully" } else { Write-Host "Failed to kill emulator" }
+          # Verify real device is active
+          adb -s 1cc072ab2f090dre shell pm list packages
+          .\gradlew.bat connectedAndroidTest --stacktrace
 
-      - name: Build Release APK
-        run: .\gradlew.bat assembleRelease --stacktrace
-
-      - name: Upload APK
+      - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-apk
-          path: app/build/outputs/apk/release/app-release.apk
+          name: test-results
+          path: app/build/test-results/**/*.html
